--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
       body{
         background-color: #D6F2D5;
-        max-width: 1200px;
+        max-width: 600px
       }
       
       h1 {
